syntax = "proto3";

package api.gen;

option go_package = "genpb";
option java_multiple_files = true;
option java_outer_classname = "ServerInfoProto";
option java_package = "com.api.gen";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service ServerInfoService {
  rpc GetInfo(google.protobuf.Empty) returns (ServerInfo) {
    option (google.api.http) = {
      get: "/info"
    };
  }
}

message ServerInfo {
  string version = 1;
  string compilation = 2;
  string compilation_time_str = 3;
  string server_time_str = 4;
  int64 server_time_ts = 5;
}
